--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   auto_route: ^11.1.0
   cupertino_icons: ^1.0.8
+  firebase_analytics: ^12.1.1
   firebase_core: ^4.4.0
   firebase_messaging: ^16.1.1
   flutter:
